// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/views/Sign-on.vue Renders Renders a form for a new user 1`] = `
<section
  class="page"
  id="sign-on"
>
  <header>
    <profile-as-figure-stub
      person="[object Object]"
      relations=""
    >
      <p />
    </profile-as-figure-stub>
     
    <logo-as-link-stub />
  </header>
   
  <mobile-as-form-stub
    person="[object Object]"
  />
   
  <!---->
   
  <footer>
    <!---->
  </footer>
</section>
`;

exports[`@/views/Sign-on.vue Renders Renders a form for a returning user 1`] = `
<section
  class="page"
  id="sign-on"
>
  <header>
    <profile-as-figure-stub
      editable="false"
      person="[object Object]"
      relations=""
    />
    <logo-as-link-stub />
  </header>
  <mobile-as-form-stub
    person="[object Object]"
  />
  <!--v-if-->
  <footer>
    <button>
      Wipe
    </button>
  </footer>
</section>
`;
